# kstars

./: .gitignore  .gitlab-ci.yml  CI_GAP_ANALYSIS.md  CMakeLists.txt  README.cicd
.gitlab-ci/: common_rules.yml
Tests/: CMakeLists.txt  testhelpers.h
Tests/fitsviewer/: testfitsdata.cpp
Tests/focus/: CMakeLists.txt  testdonutmetric.cpp
Tests/kstars_ui/: CMakeLists.txt  test_astrometry_index_download.cpp  test_catalog_download.cpp  test_ekos.cpp  test_ekos.h  test_ekos_filterwheel.cpp  test_ekos_focus.cpp  test_ekos_focus.h  test_ekos_helper.cpp  test_ekos_helper.h  test_ekos_mount.cpp  test_ekos_scheduler_ops.cpp  test_ekos_simulator.cpp
Tests/polaralign/: test_polaralign.cpp
datahandlers/: ksparser.cpp
docker/: CONTAINER_SETUP.md  Dockerfile  run-offline-tests.sh
docker/astrometry/: README.md
kstars/: CMakeLists.txt
kstars/auxiliary/: kspaths.cpp
kstars/ekos/align/: opsastrometryindexfiles.cpp
kstars/ekos/focus/: donutmetrics.h  focus.cpp  focus.h
